Front: Fixed spacing between team members on breakpoints edge cases. Linked another team member in footer

--- a/components/Team/Team.module.scss
+++ b/components/Team/Team.module.scss
@@ -120,7 +120,7 @@
 
     &:nth-of-type(1),
     &:nth-of-type(2) {
-      margin-right: 4rem;
+      margin-right: 2rem;
     }
 
     &:last-of-type {
@@ -176,6 +176,15 @@
         margin: 0 auto;
         padding: 2rem 0;
       }
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .card {
+    &:nth-of-type(1),
+    &:nth-of-type(2) {
+      margin-right: 4rem;
     }
   }
 }
